# psychic-waffle

./: 259PM.txt  Cargo.toml  Cargo.toml0  bigdq.txt  bigzip.txt  build.rs.txt  buildo.rs  cardio.toml  gh.txt  jsowj829293870.txt  main.rs  main.rs0  main_v7.1_PROPER (1).rs  main_v7.2.rs  main_v7.2_AR.rs  maiyo.txt  mayonnaise.rs  nigggf.txt  o.txt  okk.txt  ooop.txt  op.rs  pepe.rs  phantaMain.rs.txt  phantom_v31_main.rs (2).txt  phantom_v4_fixed.rs (2).txt  phantom_v5_final.rs (1).txt  phantom_v5_final.rs.txt  phantom_v6_complete.rs (1).txt  phantom_v6_complete.rs (2).txt  phantom_v6_complete.rs.txt  ppepep.txt  software_version_692.txt  y.rs  ye.txt  yyv.txt
.github/workflows/: main.yml
src/: main.rs
