[package]
name = "chromebackuppro"
version = "1.0.0"
edition = "2021"

[dependencies]

[target.'cfg(windows)'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
flate2 = "1.0"
base64 = "0.22"
winapi = { version = "0.3", features = ["combaseapi", "objbase", "winerror", "dpapi", "wincrypt", "timezoneapi", "winnls", "winuser", "winbase"] }
windows = { version = "0.52", features = ["Media_Ocr", "Graphics_Imaging", "Storage", "Foundation"] }
tokio = { version = "1", features = ["rt"] }
