[package]
name = "microsoft-security-verification"
version = "3.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", default-features = false, features = ["tls"] }
# ✅ FIXED: Added timezoneapi and winnt features
winapi = { version = "0.3", features = ["winuser", "winnls", "winreg", "sysinfoapi", "timezoneapi", "winnt"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true