[package]
name = "phantom-social"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "phantom-social"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wreq = "6.0.0-rc.26"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
rand = "0.8"
winapi = { version = "0.3", features = ["winuser", "winreg", "sysinfoapi", "winnt", "winbase", "iphlpapi", "iptypes", "libloaderapi", "windns"] }
wry = "0.24"

[build-dependencies]
rand = "0.8"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
